Bump to latest version of SpringBoot