@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.12</version>
+		<version>3.4.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.gridgain.ps.k8s</groupId>
@@ -14,10 +14,30 @@
 	<name>igniteclient</name>
 	<description>Spring Boot Ignite Client</description>
 	<properties>
-		<java.version>11</java.version>
+		<java.version>17</java.version>
 		<gridgain.version>8.9.20</gridgain.version>
 		<ignite-spring-data-ext.version>2.0.0</ignite-spring-data-ext.version>
-		<ignite-spring-autoconfigure-ext.version>1.0.0</ignite-spring-autoconfigure-ext.version>
+		<ignite-spring-autoconfigure-ext.version>2.0.0</ignite-spring-autoconfigure-ext.version>
+        <spring-boot.run.jvmArguments>-Dfile.encoding=UTF-8 --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED
+--add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+--add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED
+--add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
+--add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
+--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED
+--add-opens=java.base/java.io=ALL-UNNAMED
+--add-opens=java.base/java.nio=ALL-UNNAMED
+--add-opens=java.base/java.util=ALL-UNNAMED
+--add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+--add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED
+--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
+--add-opens=java.base/java.lang=ALL-UNNAMED
+--add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+--add-opens=java.base/java.math=ALL-UNNAMED
+--add-opens=java.sql/java.sql=ALL-UNNAMED
+--add-opens=java.base/java.net=ALL-UNNAMED
+--add-opens=java.base/java.security.cert=ALL-UNNAMED
+--add-opens=java.base/sun.security.x509=ALL-UNNAMED
+--add-opens=java.base/sun.security.ssl=ALL-UNNAMED</spring-boot.run.jvmArguments>
 	</properties>
 	<repositories>
 		 <repository>
